--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "fount-js": "^0.0.3",
+    "sessionless-node": "^0.11.0"
   }
 }
