--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "fount-js": "^0.0.3",
+    "bdo-js": "^0.0.6",
+    "fount-js": "0.0.5",
     "sessionless-node": "^0.11.0"
   }
 }
